tests/integration_tests/snapshots/integration_tests__e2e_tests__nullifier_queue-proofs.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: proofs
---
{
  "context": {
    "slot": 0
  },
  "value": [
    {
      "proof": [
        "11111111111111111111111111111111",
        "3CFKteYSRSkp9EGFPzibgzCPtNuJ5HeZ31fAsBpgcHwZ",
        "274k4KPY5VhmU5pCwwJzyHaY4AH4m7SjnZnyj44UitJc",
        "2gQksfK543Jw196amPxXWceFzNTfRHiqb7x2edvupftT",
        "Y8pRoGMGXJPGZyb7m4sqkPsTSJvzZ7oSVnaybCcYbgd",
        "3w895nemtSxb1fEjFT3cXkVpW3y6f9uHQn43jEwu1RWc",
        "46JM2e72mdEAxkSeXc65b3aLWkAQpX6NF7mdyuXQKguu",
        "WKLyYL7wpK5zVsWoMU2rcUiMwRWp9PowG83GHHH1dqn",
        "4CztDUcRvGkTyFoVEXXcBwd5UwqJcJJWpdL8FFERrqkU",
        "yjDkqNqZtBwpG7iUwT3hqKNKZAP9CcBDyBBuGPNk2jQ",
        "2r8qWibedWpM7QkW6QvDDUEQAHT9isX629UKcUxbY8BT",
        "38Aoz1ZUAnRqSCxdQuEkLhzYMRi1Tu1rSBy1UymA8yfK",
        "3zBeAgo5EwPrgsXRLUV6DhQrsUUhwbmQXPnZkudhsnSD",
        "2Q5cDvZW6hTxFFDTHhAf129PH4z8EZLYA1meeZpPW76F",
        "2gnsMw1zhpqGeAakoQLarCXVUaeEGDHm5uma1Jznx7qD",
        "3MXZLrn3tnLMWJznkMombRHkgkfsiBTPru2wjHDd3kLh",
        "3rrDm8iED4sDyonpLs9J3TDoTP8U4jsvXCmoupoCvvKc",
        "48YJtP1G5pKWu7Jy1NRagdj29dwxVXFsySrBVw1nALhX",
        "22tjwuiv6VgeMDs8qXpkZ7cY5rcgrFrG5knp7swZ1wQ2",
        "2dS4UCZ6RJvwPBaWmcz1L7ips34xnbNMfK9D8UHdFJfT",
        "3EdF4zvu7uwW7xYdnaKUPzqDY5Msq9FfWn6HgEnRTkDB",
        "2jzv6Z8vEXSYRXQCFnVYvzgJ2RfyDN1QEjdHm6CBvJUg",
        "2fomPS2xUPwXxVF8hx5YtMpBHmQKSZKushUiWYsy9Eqx",
        "3Pi3nRu4fWpnW5rYDAoraX1Q2xDCRQ24Dq8TEY7gaSBn",
        "3dbMMyehykAriNZ8FMJgPc1N6YSzm9ZfV2HcW9sbaXzP",
        "4EE5KQnQ6Tvo78gGhTu8serpJV4srbRhYZ3rdvCiRa5e"
      ],
      "root": "3zW9Gafh2Y9B1XKE13Vr3msqRVMcWFcwi1e2n4TxVDjT",
      "leafIndex": 2,
      "hash": "2obBYpkEzCJguKrspYFr94QPan2echSVQjWC2D68vEAZ",
      "merkleTree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
      "rootSeq": 4
    }
  ]
}
