tests/integration_tests/snapshots/integration_tests__e2e_tests__payer-lamport_transfers-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "signature": "5NLdbqznXqmTPTN8JBLquriDggb9qaRszVGLSvt6t5esy2Q8Z1iqAuXF4qoLK7HM6oGLySUNUkzhnSocwArpAqmV",
        "slot": 0,
        "blockTime": 0
      },
      {
        "signature": "4TFBPyvatWgjTdNesfaTo3YkbP2spvGmgZgLn6CvTeqRZSi1ZuPCkK7fLaDbPKskMSF4Azge6QPvtZt9VUV7KBF8",
        "slot": 0,
        "blockTime": 0
      },
      {
        "signature": "QBrbAZFq12LCbnv5dByn8vB8Znam4ieGQVzybapgPL5LCa9KHfuYZKV6Nah6UGsa6FUptmT6tSpexWZDrbp82iP",
        "slot": 0,
        "blockTime": 0
      }
    ],
    "cursor": null
  }
}
