tests/integration_tests/snapshots/integration_tests__e2e_tests__receiver-lamport_transfers-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "signature": "kNXkK3aXPDurmMfPbcfPNwNEWbtqdmFLcE8ZrH3oV7tbHBdH3xzUYso7icJZ4sT7MNjemsH8MdK9WW5CTHaUM59",
        "slot": 0,
        "blockTime": 0
      },
      {
        "signature": "akFrcAJwhAeK6AyrMvtcMXF13Cd451NLmCmGteL3WbZnzCrW25GUr7Ku5thfwCT28M8TJbRa5p854gVr1cVvDgN",
        "slot": 0,
        "blockTime": 0
      }
    ],
    "cursor": null
  }
}
