tests/integration_tests/snapshots/integration_tests__e2e_tests__validity_proof-payer-validity-proof.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: validity_proof
---
{
  "compressedProof": {
    "a": [],
    "b": [],
    "c": []
  },
  "roots": [
    "4B9KobBhDsbtegrWd22VVAcU83tLWbLo8yrKFc9spEEs"
  ],
  "rootIndices": [
    1
  ],
  "leafIndices": [
    0
  ],
  "leaves": [
    "4AiUmKwenqJpsvcj4TAoqJw3gnrBRkTpGXsSyrNUu4Xr"
  ],
  "merkleTrees": [
    "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W"
  ]
}
